# 4452-Final-Project

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
experiments/: 01_tinycnn_baseline_64.md  02_tinycnn_96_cbam_256dim.md  03_tinycnn_96_512dim.md  04_tinycnn_joint_phased.md
hccr/: __init__.py  config.py  utils.py
hccr/evaluation/: __init__.py  benchmark.py  confusion.py  metrics.py
hccr/models/: __init__.py  backbone.py  clip_model.py  mini_resnet.py  mini_resnet_joint_v2.py  mini_restnet_join.py  mobilenetv3.py
hccr/structural/: README.md  __init__.py  bigram.py  combined.py  radical_filter.py  radical_table.py
hccr/training/: __init__.py  early_stopping.py  losses.py  trainer.py
outputs/: collision_analysis.json
outputs/mini_resnet/: metrics_classification.csv
outputs/tinycnn/: metrics_classification.csv
outputs/tinycnn_512/: metrics_classification.csv
outputs/tinycnn_512_aug/: metrics_classification.csv
resources/: label_map.json  radical_table.json  stroke_types.json
scripts/: EXAMPLES.md  PIPELINE.md  README.md  SUMMARY.txt  build_bigram_table.py  build_collision_analysis.py  build_constraint_tensors.py  build_label_map.py  build_radical_table.py  build_stroke_types.py  eval_ablation.py  eval_bigram_settings.py  eval_clip_zeroshot.py  eval_structural.py  eval_zero_shot.py  quick_bigram_test.py  run_all.py  run_benchmarks.py  train_mini_resnet.py  train_mobilenetv3.py  train_neurosymbolic.py  train_neurosymbolic_v2.py  train_symbolic.py  train_tinycnn.py  train_tinycnn_joint.py  train_tinycnn_radical.py  validate_tests.py
(+2 files in other folders)
